--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Notch</title>
+    <title>Top Notch Solutions</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <img src="images/TopNotch_Main.png" alt="Top Notch Logo">
             </a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/virtual_assistance.html">Virtual Assistance</a></li>
                 <li><a href="pages/performance_automotive.html">Performance Automotive</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -26,8 +26,12 @@
     <header class="hero">
         <div class="hero-content">
             <img src="images/TopNotch_Main.png" alt="Top Notch Logo">
-            <h1>Welcome to Top Notch</h1>
+            <h1>Welcome to Top Notch Solutions</h1>
             <p>"Versatile. Reliable. Top Notch."</p>
+            <div class="hero-buttons">
+                <a href="pages/virtual_assistance.html" class="btn-primary">Explore Virtual Assistance</a>
+                <a href="pages/performance_automotive.html" class="btn-secondary">Explore Performance Automotive</a>
+            </div>
         </div>
     </header>
 
@@ -78,7 +82,14 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 Top Notch. All Rights Reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Top Notch Solutions. All Rights Reserved.</p>
+            <div class="social-links">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">LinkedIn</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
