--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/virtual_assistance.html">Virtual Assistance</a></li>
                 <li><a href="pages/performance_automotive.html">Performance Automotive</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="pages/contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
