Updated site layout, added new images, and reorganized files

--- a/index.html
+++ b/index.html
@@ -3,65 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TopNotch Solutions</title>
+    <title>Top Notch Solutions</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Header with Parent Brand Logo -->
+    <!-- Header -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">
-                <img src="images/pictures/TopNotch_Parent.png" alt="TopNotch Solutions Logo">
+            <a href="index.html" class="logo">
+                <img src="images/TopNotch_Main.png" alt="Top Notch Logo">
             </a>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/virtual_assistance.html">Virtual Assistance</a></li>
+                <li><a href="pages/performance_automotive.html">Performance Automotive</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <header class="hero">
+    <header class="hero hero-home">
         <div class="hero-content">
-            <img src="images/pictures/TopNotch_Parent.png" alt="TopNotch Solutions Main Logo">
-            <h1>TopNotch Solutions</h1>
-            <p>"Versatile. Reliable. TopNotch"</p>
-            <a href="#services" class="btn-primary">Explore Our Services</a>
+            <h1>Welcome to Top Notch Solutions</h1>
+            <p>"Versatile. Reliable. Top Notch."</p>
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <!-- Virtual Assistance -->
-                <div class="service-item">
-                    <img src="images/pictures/TopNotch_VirtaulAssist.png" alt="TopNotch Virtual Assistance Logo">
-                    <h3>TopNotch Virtual Assistance</h3>
-                    <p>"Efficiency and Precision, Virtually Delivered"</p>
-                    <p>We offer comprehensive support services such as virtual assistance, project management, administrative support, and more. Each service is tailored to meet the unique needs of our clients, ensuring that your business operations are streamlined and effective.</p>
-                </div>
-                <!-- Performance Automotive -->
-                <div class="service-item">
-                    <img src="images/pictures/TopNotch_Auto.png" alt="TopNotch Performance Automotive Logo">
-                    <h3>TopNotch Performance Automotive</h3>
-                    <p>"Driven by Precision, Fueled by Passion"</p>
-                    <p>We provide expert mobile mechanic services, offering convenience and reliability directly at your location. From routine maintenance to emergency repairs, our skilled technicians ensure your vehicle remains in peak condition.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Us Section -->
+    <!-- Introduction Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>About TopNotch Solutions</h2>
-            <p>TopNotch Solutions is a versatile service provider dedicated to helping businesses and individuals achieve their goals efficiently across a wide range of domains. As the parent brand, TopNotch Solutions encompasses specialized sub-brands, including TopNotch Virtual Assistance and TopNotch Performance Automotive.</p>
-            <p>As a dynamic and growing company, TopNotch Solutions is continuously exploring new avenues to expand our service offerings. Our commitment to excellence and efficiency drives us to innovate and add more TopNotch services that cater to the evolving needs of our clients. Whether in the office, on the road, or beyond, our mission is to enhance productivity and allow you to focus on what truly matters.</p>
-            <p>Stay tuned as we introduce more TopNotch brands designed to simplify your life and help you achieve your goals with unmatched quality and reliability.</p>
+            <h2>Who We Are</h2>
+            <p>
+                Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:
+            </p>
+            <ul>
+                <li><strong>Top Notch Virtual Assistance:</strong> Providing unparalleled remote support services to businesses and professionals.</li>
+                <li><strong>Top Notch Performance Automotive:</strong> Specializing in automotive performance, repairs, and customizations.</li>
+            </ul>
         </div>
     </section>
 
@@ -89,7 +68,9 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 TopNotch Solutions. All Rights Reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Top Notch Solutions. All Rights Reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
