--- a/index.html
+++ b/index.html
@@ -26,21 +26,26 @@
     <header class="hero hero-home">
         <div class="hero-content">
             <h1>Welcome to Top Notch Solutions</h1>
-            <p>"Versatile. Reliable. Top Notch."</p>
+            <p class="tagline">"Versatile. Reliable. Top Notch."</p>
+            <a href="#services" class="btn-primary">Explore Our Services</a>
         </div>
     </header>
 
-    <!-- Introduction Section -->
+    <!-- Who We Are Section -->
     <section id="about" class="about">
         <div class="container">
             <h2>Who We Are</h2>
-            <p>
-                Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:
-            </p>
-            <ul>
-                <li><strong>Top Notch Virtual Assistance:</strong> Providing unparalleled remote support services to businesses and professionals, ensuring efficiency, precision, and top-notch results.</li>
-                <li><strong>Top Notch Performance Automotive:</strong> Specializing in automotive performance, repairs, and customizations, driven by a passion for cars and a commitment to excellence.</li>
-            </ul>
+            <p>Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:</p>
+            <div class="about-grid">
+                <div class="about-item">
+                    <h3>Top Notch Virtual Assistance</h3>
+                    <p>Providing unparalleled remote support services to businesses and professionals, ensuring efficiency and precision.</p>
+                </div>
+                <div class="about-item">
+                    <h3>Top Notch Performance Automotive</h3>
+                    <p>Specializing in automotive performance, repairs, and customizations, driven by a passion for cars and a commitment to excellence.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -49,14 +54,12 @@
         <div class="container">
             <h2>Our Services</h2>
             <div class="services-grid">
-                <!-- Virtual Assistance -->
                 <div class="service-item">
                     <img src="images/TopNotch_VirtualAssist.png" alt="Virtual Assistance Logo">
                     <h3>Virtual Assistance</h3>
                     <p>Efficiency and precision, virtually delivered.</p>
                     <a href="pages/virtual_assistance.html" class="btn-primary">Learn More</a>
                 </div>
-                <!-- Performance Automotive -->
                 <div class="service-item">
                     <img src="images/TopNotch_Auto.png" alt="Performance Automotive Logo">
                     <h3>Performance Automotive</h3>
