--- a/index.html
+++ b/index.html
@@ -31,19 +31,25 @@
         </div>
     </header>
 
-    <!-- Who We Are Section -->
+    <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
             <h2>Who We Are</h2>
-            <p>Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:</p>
+            <p>
+                Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:
+            </p>
             <div class="about-grid">
                 <div class="about-item">
                     <h3>Top Notch Virtual Assistance</h3>
-                    <p>Providing unparalleled remote support services to businesses and professionals, ensuring efficiency and precision.</p>
+                    <p>
+                        Providing unparalleled remote support services to businesses and professionals, ensuring efficiency and precision.
+                    </p>
                 </div>
                 <div class="about-item">
                     <h3>Top Notch Performance Automotive</h3>
-                    <p>Specializing in automotive performance, repairs, and customizations, driven by a passion for cars and a commitment to excellence.</p>
+                    <p>
+                        Specializing in automotive performance, repairs, and customizations, driven by a passion for cars and a commitment to excellence.
+                    </p>
                 </div>
             </div>
         </div>
