Updated Virtual Assistance and Performance Automotive pages for consistency

--- a/pages/virtual_assistance.html
+++ b/pages/virtual_assistance.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Notch Virtual Assistance</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -17,16 +18,21 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="virtual_assistance.html" class="active">Virtual Assistance</a></li>
                 <li><a href="performance_automotive.html">Performance Automotive</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- Content -->
+    <!-- Hero Section -->
+    <header class="hero hero-virtual">
+        <div class="hero-content">
+            <h1>Top Notch Virtual Assistance</h1>
+            <p>Efficiency and precision, virtually delivered.</p>
+        </div>
+    </header>
+
+    <!-- Content Section -->
     <section class="content">
         <div class="container">
-            <h1>Top Notch Virtual Assistance</h1>
-            <p>At Top Notch Virtual Assistance, we provide remote support services tailored to help businesses and professionals thrive. From scheduling and data management to customer support, we handle the details so you can focus on the big picture.</p>
             <h2>Our Services</h2>
             <ul>
                 <li>Administrative Support</li>
@@ -34,7 +40,6 @@
                 <li>Data Entry and Management</li>
                 <li>Email and Calendar Management</li>
             </ul>
-            <a href="contact.html" class="btn-primary">Contact Us</a>
         </div>
     </section>
 
@@ -42,6 +47,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Top Notch Solutions. All Rights Reserved.</p>
+            <div class="social-links">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">LinkedIn</a>
+            </div>
         </div>
     </footer>
 </body>
