--- a/pages/performance_automotive.html
+++ b/pages/performance_automotive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Notch Performance Automotive</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -17,16 +18,21 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="virtual_assistance.html">Virtual Assistance</a></li>
                 <li><a href="performance_automotive.html" class="active">Performance Automotive</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
 
-    <!-- Content -->
+    <!-- Hero Section -->
+    <header class="hero hero-automotive">
+        <div class="hero-content">
+            <h1>Top Notch Performance Automotive</h1>
+            <p>Driven by precision, fueled by passion.</p>
+        </div>
+    </header>
+
+    <!-- Content Section -->
     <section class="content">
         <div class="container">
-            <h1>Top Notch Performance Automotive</h1>
-            <p>Driven by precision and fueled by passion, Top Notch Performance Automotive offers a range of services to keep your vehicle at its best. From performance tuning to custom modifications, we deliver excellence every time.</p>
             <h2>Our Services</h2>
             <ul>
                 <li>Performance Tuning</li>
@@ -34,7 +40,6 @@
                 <li>Maintenance and Repairs</li>
                 <li>Diagnostic Services</li>
             </ul>
-            <a href="contact.html" class="btn-primary">Contact Us</a>
         </div>
     </section>
 
@@ -42,6 +47,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 Top Notch Solutions. All Rights Reserved.</p>
+            <div class="social-links">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">LinkedIn</a>
+            </div>
         </div>
     </footer>
 </body>
