updated homepage to VA only

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Notch Solutions</title>
+    <title>Top Notch Virtual Assistance</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -16,8 +16,8 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/virtual_assistance.html">Virtual Assistance</a></li>
-                <li><a href="pages/performance_automotive.html">Performance Automotive</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -25,8 +25,8 @@
     <!-- Hero Section -->
     <header class="hero hero-home">
         <div class="hero-content">
-            <h1>Welcome to Top Notch Solutions</h1>
-            <p class="tagline">"Versatile. Reliable. Top Notch."</p>
+            <h1>Top Notch Virtual Assistance</h1>
+            <p class="tagline">"Efficient. Reliable. Professional."</p>
             <a href="#services" class="btn-primary">Explore Our Services</a>
         </div>
     </header>
@@ -36,22 +36,8 @@
         <div class="container">
             <h2>Who We Are</h2>
             <p>
-                Top Notch Solutions is a multifaceted company committed to delivering exceptional services in two key areas:
+                At Top Notch Virtual Assistance, we specialize in providing high-quality remote support to busy entrepreneurs, executives, and teams. Our services are designed to help you focus on what matters most—while we take care of the rest.
             </p>
-            <div class="about-grid">
-                <div class="about-item">
-                    <h3>Top Notch Virtual Assistance</h3>
-                    <p>
-                        Providing unparalleled remote support services to businesses and professionals, ensuring efficiency and precision.
-                    </p>
-                </div>
-                <div class="about-item">
-                    <h3>Top Notch Performance Automotive</h3>
-                    <p>
-                        Specializing in automotive performance, repairs, and customizations, driven by a passion for cars and a commitment to excellence.
-                    </p>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -61,16 +47,19 @@
             <h2>Our Services</h2>
             <div class="services-grid">
                 <div class="service-item">
-                    <img src="images/TopNotch_VirtualAssist.png" alt="Virtual Assistance Logo">
-                    <h3>Virtual Assistance</h3>
-                    <p>Efficiency and precision, virtually delivered.</p>
-                    <a href="pages/virtual_assistance.html" class="btn-primary">Learn More</a>
+                    <img src="images/TopNotch_VirtualAssist.png" alt="Virtual Assistance">
+                    <h3>Executive Assistance</h3>
+                    <p>Calendar management, email triage, task prioritization, and high-level support for executives and founders.</p>
                 </div>
                 <div class="service-item">
-                    <img src="images/TopNotch_Auto.png" alt="Performance Automotive Logo">
-                    <h3>Performance Automotive</h3>
-                    <p>Driven by precision, fueled by passion.</p>
-                    <a href="pages/performance_automotive.html" class="btn-primary">Learn More</a>
+                    <img src="images/TopNotch_VirtualAssist.png" alt="Customer Service">
+                    <h3>Customer Support</h3>
+                    <p>Friendly, prompt customer service via email, chat, or phone—branded to your voice and style.</p>
+                </div>
+                <div class="service-item">
+                    <img src="images/TopNotch_VirtualAssist.png" alt="Marketing Help">
+                    <h3>Marketing Support</h3>
+                    <p>Social media scheduling, basic content writing, lead generation research, and CRM upkeep.</p>
                 </div>
             </div>
         </div>
@@ -101,7 +90,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Top Notch Solutions. All Rights Reserved.</p>
+            <p>&copy; 2024 Top Notch Virtual Assistance. All Rights Reserved.</p>
             <div class="social-links">
                 <a href="#">Facebook</a>
                 <a href="#">Twitter</a>
