updated services section

--- a/index.html
+++ b/index.html
@@ -41,29 +41,35 @@
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <img src="images/TopNotch_VirtualAssist.png" alt="Virtual Assistance">
-                    <h3>Executive Assistance</h3>
-                    <p>Calendar management, email triage, task prioritization, and high-level support for executives and founders.</p>
-                </div>
-                <div class="service-item">
-                    <img src="images/TopNotch_VirtualAssist.png" alt="Customer Service">
-                    <h3>Customer Support</h3>
-                    <p>Friendly, prompt customer service via email, chat, or phone—branded to your voice and style.</p>
-                </div>
-                <div class="service-item">
-                    <img src="images/TopNotch_VirtualAssist.png" alt="Marketing Help">
-                    <h3>Marketing Support</h3>
-                    <p>Social media scheduling, basic content writing, lead generation research, and CRM upkeep.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+	<!-- Services Section -->
+	<section id="services" class="services">
+		<div class="container">
+			<h2>Our Virtual Assistance Services</h2>
+			<div class="services-grid">
+				<div class="service-item">
+					<img src="images/TopNotch_VirtualAssist.png" alt="Executive Assistance">
+					<h3>Executive Assistance</h3>
+					<p>Professional support with scheduling, inbox management, task coordination, and administrative follow-up.</p>
+				</div>
+				<div class="service-item">
+					<img src="images/TopNotch_VirtualAssist.png" alt="Customer Service">
+					<h3>Customer Support</h3>
+					<p>Provide polished and prompt email/chat/phone customer service tailored to your brand’s tone and process.</p>
+				</div>
+				<div class="service-item">
+					<img src="images/TopNotch_VirtualAssist.png" alt="Marketing Support">
+					<h3>Marketing Support</h3>
+					<p>Social media scheduling, lead generation research, newsletter formatting, and CRM data entry.</p>
+				</div>
+				<div class="service-item">
+					<img src="images/TopNotch_VirtualAssist.png" alt="Back Office Help">
+					<h3>Back Office Admin</h3>
+					<p>Document prep, data tracking, light bookkeeping, task list upkeep, and other general virtual admin tasks.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
