updated services icons and custom logos

--- a/index.html
+++ b/index.html
@@ -46,21 +46,25 @@
 		<div class="container">
 			<h2>Our Virtual Assistance Services</h2>
 			<div class="services-grid">
+
 				<div class="service-item">
-					<img src="images/TopNotch_VirtualAssist.png" alt="Executive Assistance">
+					<img src="images/ExecAssist.png" alt="Executive Assistance" class="service-icon">
 					<h3>Executive Assistance</h3>
 					<p>Professional support with scheduling, inbox management, task coordination, and administrative follow-up.</p>
 				</div>
+
 				<div class="service-item">
-					<img src="images/TopNotch_VirtualAssist.png" alt="Customer Service">
+					<img src="images/customerasssit.png" alt="Customer Support" class="service-icon">
 					<h3>Customer Support</h3>
 					<p>Provide polished and prompt email/chat/phone customer service tailored to your brand’s tone and process.</p>
 				</div>
+
 				<div class="service-item">
-					<img src="images/TopNotch_VirtualAssist.png" alt="Marketing Support">
+					<img src="images/marketing.png" alt="Marketing Support" class="service-icon">
 					<h3>Marketing Support</h3>
 					<p>Social media scheduling, lead generation research, newsletter formatting, and CRM data entry.</p>
 				</div>
+
 			</div>
 		</div>
 	</section>
