Fix image reference for CustomerAssist.png

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
       </div>
       <div class="service-item">
-        <img src="images/customerassist.png" alt="Customer Service" class="service-icon" />
+        <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
         <p>
           <strong>Customer Service</strong><br />
           Client engagement, service coordination, and proactive problem-solving.
