Added executive, customer service, and marketing pages + updated homepage

--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/TopNotch_Main2.png" />
   <meta property="og:url" content="https://yourdomain.com" />
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Top Notch Virtual Assistance",
-    "url": "https://www.top-notch-solutions.com/",
-    "logo": "images/TopNotch_Main2.png",
-    "sameAs": [
-      "https://facebook.com/TopNotchVA",
-      "https://instagram.com/TopNotchVA",
-      "https://linkedin.com/company/topnotchva"
-    ]
-  }
-  </script>
+	
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "Top Notch Virtual Assistance",
+	  "url": "https://www.top-notch-solutions.com",
+	  "logo": "https://www.top-notch-solutions.com/images/TopNotch_Main2.png",
+	  "description": "Virtual assistant services specializing in executive support, customer service, and marketing for small businesses and professionals.",
+	  "sameAs": [
+		"https://facebook.com/TopNotchVA",
+		"https://instagram.com/TopNotchVA",
+		"https://linkedin.com/company/topnotchva"
+	  ],
+	  "contactPoint": {
+		"@type": "ContactPoint",
+		"email": "support@top-notch-solutions.com",
+		"contactType": "customer support",
+		"availableLanguage": "English"
+	  }
+	}
+	</script>
+
   <title>Top Notch Virtual Assistance | Executive & Customer Support</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
