--- a/customer-service.html
+++ b/customer-service.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/CustomerAssist.png" alt="Top Notch Logo" class="main-logo" />
     <h2 class="tagline">Customer Service</h2>
   </header>
 
