--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/executive-assistance.png" alt="Top Notch Logo" class="main-logo" />
     <h2 class="tagline">Executive Assistance</h2>
   </header>
 
