--- a/marketing-support.html
+++ b/marketing-support.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/marketing.png" alt="Top Notch Logo" class="main-logo" />
     <h2 class="tagline">Marketing Support</h2>
   </header>
 
